@@ -8,6 +8,7 @@ import com.robertx22.mine_and_slash.uncommon.datasaving.Load;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.player.PlayerEntity;
+import net.minecraft.util.DamageSource;
 import net.minecraftforge.event.entity.living.LivingHurtEvent;
 import net.minecraftforge.eventbus.api.EventPriority;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
@@ -44,36 +45,36 @@ public class OnHurt {
         // mobs take much less damage from any source other than my mods. This is
         // required or else there's no point in getting legendary weapons if a diamond
         // sword more damage
-        if (event.getSource() != null) {
-            if (event.getSource().getTrueSource() instanceof LivingEntity == false) {
-                if (event.getEntity() instanceof PlayerEntity == false) {
-                    event.setAmount(event.getAmount() * ModConfig.INSTANCE.Server.MOB_ENVIRONMENT_DAMAGE_MULTI
-                            .get()
-                            .floatValue());
+        if (event.getSource() == null) {
+            return;
+        }
 
-                    return;
-                }
-            } else {
-
-                // dont decrease dmg if its from whitelist item
-                LivingEntity en = (LivingEntity) event.getSource().getTrueSource();
-
-                ModDmgWhitelistContainer.ModDmgWhitelist mod = ModDmgWhitelistContainer.getModDmgWhitelist(en
-                        .getHeldItemMainhand());
-
-                if (mod != null) {
-                    event.setAmount(event.getAmount() * mod.dmgMultiplier);
-                    return;
-                }
-
-                event.setAmount(event.getAmount() * ModConfig.INSTANCE.Server.NON_MOD_DAMAGE_MULTI
+        if (isEnviromentalDmg(event.getSource())) {
+            if (event.getEntity() instanceof PlayerEntity == false) {
+                event.setAmount(event.getAmount() * ModConfig.INSTANCE.Server.MOB_ENVIRONMENT_DAMAGE_MULTI
                         .get()
                         .floatValue());
                 return;
             }
+        } else {
 
+            // dont decrease dmg if its from whitelist item
+            LivingEntity en = (LivingEntity) event.getSource().getTrueSource();
+
+            ModDmgWhitelistContainer.ModDmgWhitelist mod = ModDmgWhitelistContainer.getModDmgWhitelist(en
+                    .getHeldItemMainhand());
+
+            if (mod != null) {
+                event.setAmount(event.getAmount() * mod.dmgMultiplier);
+                return;
+            }
+            return;
         }
 
+    }
+
+    public static boolean isEnviromentalDmg(DamageSource source) {
+        return source.getTrueSource() instanceof LivingEntity == false;
     }
 
     public static void onHurtRecordNonPlayerDmg(LivingHurtEvent event) {
